--- a/WTF/vimIntro.html
+++ b/WTF/vimIntro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<xmp theme="Cosmo" style="display:non;">
+<xmp theme="journal" style="display:non;">
 # VIM editor
 ================================================================
 ## QUICK SUMMARY
