--- a/contents.html
+++ b/contents.html
@@ -7,7 +7,10 @@
 ##VIM introduction
 </a>
 
-
+#WEB
+<a href="./WEB/gitOnWeb.html">
+##Git on web
+</a>
 
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
