--- a/contents.html
+++ b/contents.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<xmp theme="superhero" style="display:non;">
+<xmp theme="journal" style="display:non;">
 
 #WTF
 <a href="./WTF/vimIntro.html">
