--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<xmp theme="superhero" style="display:non;">
+<xmp theme="journal" style="display:non;">
 
 <a href="contents.html">
 #Why so serious ?
