--- a/WEB/gitOnWeb.html
+++ b/WEB/gitOnWeb.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <xmp theme="journal" style="display:non;">
+
 #FROM
 #http://wiki.cementhorizon.com/display/CH/How+to+use+git+on+GoDaddy+Shared+Hosting
 --------------------------------------------
@@ -67,7 +68,17 @@ Thanks to :
 
 
 
-
+#What you have to do after update!
+##at the computer
+```
+git add *
+git commit -m 'WHATEVER'
+git push
+```
+##at the server
+```
+git pull
+```
 
 
 
