--- a/contents.html
+++ b/contents.html
@@ -4,16 +4,24 @@
 
 #WTF
 --------------------------------------
-<a href="./WTF/vimIntro.html">
-##VIM introduction
-</a> <br><br><br><br><br>
+<br><br><br><br><br>
 
 
 #WEB
 --------------------------------------
 <a href="./WEB/gitOnWeb.html">
 ##Git on web
-</a>
+</a> <br><br><br><br><br>
+
+
+#Unix
+--------------------------------------
+<a href="./WTF/vimIntro.html">
+##VIM introduction
+</a> 
+<a href=./Unix/sips.html">
+##Sips
+</a> <br><br><br><br><br>
 
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
