--- a/contents.html
+++ b/contents.html
@@ -19,7 +19,8 @@
 <a href="./WTF/vimIntro.html">
 ##VIM introduction
 </a> 
-<a href=./Unix/sips.html">
+
+<a href="./Unix/sips.html">
 ##Sips
 </a> <br><br><br><br><br>
 
