osx clipboard added

--- a/contents.html
+++ b/contents.html
@@ -24,6 +24,15 @@
 ##Sips
 </a> <br><br><br><br><br>
 
+
+
+#OSX
+--------------------------------------
+<a href="./OSX/pbCopyPaste.html">
+##Clipboard Access from terminal
+</a> 
+<br><br><br><br><br>
+
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
 </html>
