added info to vim

--- a/OSX/pbCopyPaste.html
+++ b/OSX/pbCopyPaste.html
@@ -3,11 +3,9 @@
 <xmp theme="journal" style="display:non;">
 #OSX copy and paste command in terminal
 ## useful when copying texts out from terminal to GUI
-<br>
-<br>
 ```
-pbcopy
-pbpaste
+    pbcopy #copy
+    pbpaste #paste
 ```
 <br>
 <br>
