--- a/WTF/vimIntro.html
+++ b/WTF/vimIntro.html
@@ -147,8 +147,20 @@ P  #paste before the position
 :vs text.txt
 ```
 
-#Kevin
-#2013.03.03
+
+
+
+<br><br><br><br><br>
+```
+. #repeat the previous command
+
+q<letter> #record and assign it to <letter>
+@<letter> #execute the record assigned to the <letter>
+
+>> # indent the line 
+```
+
+
 
 
 
