add neuro session

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 <a href="contents.html">
 #Why so serious ?
 </a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
+<a href="neuro.html">
+#Digging holes deeper and deeper and deeper and dipper and
+</a>
 
 
 
