--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <br>
 
 <a href="neuro.html">
-#Digging holes deeper and deeper and deeper and dipper and
+#Digging holes deeper and deeper and deeper and 디퍼 and
 </a>
 
 
