--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 
 <iframe width="640" height="360" src="http://www.youtube.com/embed/V775PPuBc7Y" frameborder="0" allowfullscreen, align="middle"></iframe>
+<br>
+Kevin Kang-ik Cho
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
 </html>
