--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
 
 <iframe width="640" height="360" src="http://www.youtube.com/embed/V775PPuBc7Y" frameborder="0" allowfullscreen, align="middle"></iframe>
 <br>
-Kevin Kang-ik Cho
+<br>
+<br>
+<br>
+<br>
+sky8671@gmail.com
+1988.09.16
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
 </html>
