--- a/contents.html
+++ b/contents.html
@@ -38,6 +38,9 @@
 <a href="./Python/pythonNote.html">
 ##IPython Notebook
 </a> 
+<a href="./Python/parallelProcessing.html">
+##Parallel Processing module
+</a> 
 <br><br><br><br><br>
 jkkkk
 </xmp>
