--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <br><br>
 <br><br>
 <a href="contents.html">
-#Why so serious ?
+#Why so serious 
 </a>
 <br>
 <br>
@@ -17,7 +17,7 @@
 <br>
 
 <a href="neuro.html">
-#Why dig holes deeper ?
+#when you can dig holes deeper ?
 </a>
 
 <br>
