fsl + tbss + thalamus script added

--- a/WTF/vimIntro.html
+++ b/WTF/vimIntro.html
@@ -158,8 +158,11 @@ q<letter> #record and assign it to <letter>
 @<letter> #execute the record assigned to the <letter>
 
 >> # indent the line 
-```
 
+
+
+`` # take you to the previous spot in the text
+```
 
 
 
