--- a/neuro.html
+++ b/neuro.html
@@ -6,6 +6,20 @@
 ##FSL
 
 <br>
+<a href="FSL/probabilistic.html">
+###probabilistic tractography
+</a>
+<a href="FSL/TBSS.html">
+###TBSS
+</a>
+<a href="FSL/thalamusProject.html">
+###thalamus project
+</a>
+
+</a>
+###Probabilistic tractography
+
+<br>
 <br>
 <br>
 <br>
@@ -14,6 +28,13 @@
 ##Slicer
 
 
+<br>
+<br>
+<br>
+<br>
+<br>
+
+##R
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js">
 </script>
