--- a/neuro.html
+++ b/neuro.html
@@ -6,18 +6,19 @@
 ##FSL
 
 <br>
-<a href="FSL/probabilistic.html">
+<a href="FSL/probabilitic.html">
 ###probabilistic tractography
 </a>
+
 <a href="FSL/TBSS.html">
 ###TBSS
 </a>
+
 <a href="FSL/thalamusProject.html">
 ###thalamus project
 </a>
 
 </a>
-###Probabilistic tractography
 
 <br>
 <br>
