--- a/index.html
+++ b/index.html
@@ -43,15 +43,38 @@
 <br>
 
 
-
-<iframe width="640" height="360" src="http://www.youtube.com/embed/V775PPuBc7Y" frameborder="0" allowfullscreen, align="middle"></iframe>
+<iframe width="640" height="360" src="http://www.youtube.com/embed/V775PPuBc7Y" frameborder="3" allowfullscreen, align="right"></iframe>
 <br>
 <br>
 <br>
 <br>
 <br>
+kcho<br>
 sky8671@gmail.com
+<br>
 1988.09.16
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+---------------------------------------------------------------------------------
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
-</html>
+<html>
