--- a/FSL/thalamusProject.html
+++ b/FSL/thalamusProject.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
 <xmp theme="journal" style="display:non;">
+
 #Thalamus Project Preprocessing
-## in bash
-
-# executed where there are subject folders 
-# with 
-# DTI and T1 dicoms
-
+## in bash script looping through each subject
+<br>
+### executed where there are subject folders 
+### with 
+### DTI and T1 dicoms
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
 ## Dicoms --> nifti format using dcm2nii
 ## rearranged the data into the right name and place
 ```
@@ -17,7 +23,6 @@ do
 	mricron ${subj}/DTI/*    #dcm2nii into nii files
 	mricron ${subj}/T1/*
 
-	
 	for possibleImage in dcm,IMA,hdr    #moving original files
 	do
 	    for img in DTI,T1
@@ -107,127 +112,112 @@ do
 
 <br><br>
 <br><br>
-#thalamus segmentation
+#Cortical roi extraction from freesurfer output
 ##using T1_freesurfer result
+**When you run freesurfer, make sure the T1-image is used though
+diffusion images also gives the output.**
 ```
 	mkdir ${subj}/segmentation/
 	mkdir ${subj}/segmentation/with_T1_freesurfer/
     mkdir ${subj}/segmentation/with_T1_freesurfer/ROIs
 	setenv SUBJECTS_DIR ${subj}
 
-    #OFC
-    #pars orbitalis, medial orbitofrontal cortex, lateral orbitofrontal cortex
-    mri_babel2vol\
-        --label ${subj}/freesurfer_T1/labels/lh.parsorbitalis.label\
-        --label ${subj}/freesurfer_T1/labels/lh.medialorbitofrontal.label\
-        --label ${subj}/freesurfer_T1/labels/lh.lateralorbitofrontal.label\
-        --temp ${subj}/freesurfer_T1/mri/rawavg.mgz\
-        --subject freesurfer_T1\
-        --hemi lh\
-        --o ${subj}/segmentation/with_T1_freesurfer/ROIs/l_OFC.nii.gz\
-        --proj frac 0 1 .1\
-        --fillthresh .3\
-        --reg ${subj}/freesurfer_T1/register.dat
+    #declaring loop strings
+    cortices=( OFC MPFC LPFC LTC MTC LTC OCC PC )
+    #for each cortices, assign appropriate label maps
+    for cortex in ${cortices[@]}
+    do
+        if [ "$cortex" = "OFC" ]
+        then
+            extra=( parsorbitalis medialorbitofrontal lateralorbitofrontal )
+        elif [ "$cortex" = "MPFC" ]
+        then
+            extra=( caudalanteriorcingulate rostralanteriorcingulate superiorfrontal )
+        elif [ "$cortex" = "LPFC" ]
+        then
+            extra=( parstriangularis rostralmiddlefrontal frontalpole parsopercularis )
+        elif [ "$cortex" = "SMC" ]
+        then
+            extra=( precentral caudalmiddlefrontal postcentral paracentral )
 
-    #MPFC 
-    #caudal anterior cingulate, rostral anterior cingulate, superior frontal gyrus
+        elif [ "$cortex" = "PC" ]
+        then
+            extra=( inferiorparietal supramarginal precuneus posteriorcingulate isthmuscingulate superiorparietal )
 
-#mri_babel2vol --label ${subj}/freesurfer_T1/labels/lh.caudalanteriorcingulate.label --label ${subj}/freesurfer_T1/labels/lh.rostralanteriorcingulate.label --label ${subj}/freesurfer_T1/labels/lh.superiorfrontal.label --temp ${subj}/freesurfer_T1/mri/rawavg.mgz --subject freesurfer_T1 --hemi lh --o ${subj}/segmentation/with_T1_freesurfer/ROIs/l_MPFC.nii.gz --proj frac 0 1 .1 --fillthresh .3 --reg ${subj}/freesurfer_T1/register.dat
+        elif [ "$cortex" = "MTC" ]
+        then
+            extra=( entorhinal parahippocampal fusiform )
 
+        elif [ "$cortex" = "LTC" ]
+        then
+            extra=( transversetemporal superiortemporal bankssts inferiortemporal middletemporal temporalpole )
 
-#LPFC :
-#	pars triangularis, frontal pole, rostral middle frontal gyrus, pars opercularis
+        elif [ "$cortex" = "OCC" ]
+        then
+            extra=( pericalcarine lingual lateraloccipital cuneus )
+        fi
 
-#mri_babel2vol --label ${subj}/freesurfer_T1/labels/lh.parstriangularis.label --label ${subj}/freesurfer_T1/labels/lh.rostralmiddlefrontal.label --label ${subj}/freesurfer_T1/labels/lh.frontalpole.label --label ${subj}/freesurfer_T1/labels/lh.parsopercularis.label --temp ${subj}/freesurfer_T1/mri/rawavg.mgz --subject freesurfer_T1 --hemi lh --o ${subj}/segmentation/with_T1_freesurfer/ROIs/l_LPFC.nii.gz --proj frac 0 1 .1 --fillthresh .3 --reg ${subj}/freesurfer_T1/register.dat
+        echo $cortex
+        echo ${extra[@]}
+        # for left and right
+        for side in lh rh
+        do
 
+            #build a label set for each cortex
+            for each in ${extra[@]}
+            do
+                new=`echo "--label ${side}.${each}.label" `
 
+                newList=`echo "${newList} ${new}" ` #append to newList
+            done
 
-#SMC : sensorimotor cortex
-#	precentral gyrus, caudal middle frontal gyrus, post-central gyrus, paracentral lobule
+            echo ${side}
 
-#mri_babel2vol --label ${subj}/freesurfer_T1/labels/lh.precentral.label --label ${subj}/freesurfer_T1/labels/lh.caudalmiddlefrontal.label --label ${subj}/freesurfer_T1/labels/lh.postcentral.label --label ${subj}/freesurfer_T1/labels/lh.paracentral.label --temp ${subj}/freesurfer_T1/mri/rawavg.mgz --subject freesurfer_T1 --hemi lh --o ${subj}/segmentation/with_T1_freesurfer/ROIs/l_SMC.nii.gz --proj frac 0 1 .1 --fillthresh .3 --reg ${subj}/freesurfer_T1/register.dat
+            # actuall command
+            mri_label2vol ${newList} --temp ${subj}/freesurfer_T1/mri/rawavg.mgz --subject freesurfer_T1 --hemi ${side} --o ${subj}/segmentation/with_T1_freesurfer/ROIs/${side}_${cortex}.nii.gz --proj frac 0 1 .1 --fillthresh .3 --reg ${subj}/freesurfer_T1/register.dat
 
-
-
-#PC : parietal cortex
-#	inferior parietal cortex, supramarginal gyrus, precuneus cortex, posterior cingulate cortex, isthmus cingulate, superior parietal cortex
-
-
-#mri_babel2vol --label ${subj}/freesurfer_T1/labels/lh.inferiorparietal.label --label ${subj}/freesurfer_T1/labels/lh.supramarginal.label --label ${subj}/freesurfer_T1/labels/lh.precuneus.label --label ${subj}/freesurfer_T1/labels/lh.posteriorcingulate.label --label ${subj}/freesurfer_T1/labels/lh.isthmuscingulate.label --label ${subj}/freesurfer_T1/labels/lh.superiorparietal.label --temp ${subj}/freesurfer_T1/mri/rawavg.mgz --subject freesurfer_T1 --hemi lh --o ${subj}/segmentation/with_T1_freesurfer/ROIs/l_PC.nii.gz --proj frac 0 1 .1 --fillthresh .3 --reg ${subj}/freesurfer_T1/register.dat
-
-
-
-
-#MTC : medial temporal cortex
-#	entorhinal cortex, parahippocampal gyrus, fusiform gyrus
-
-#mri_babel2vol --label ${subj}/freesurfer_T1/labels/lh.entorhinal.label --label ${subj}/freesurfer_T1/labels/lh.parahippocampal.label --label ${subj}/freesurfer_T1/labels/lh.fusiform.label --temp ${subj}/freesurfer_T1/mri/rawavg.mgz --subject freesurfer_T1 --hemi lh --o ${subj}/segmentation/with_T1_freesurfer/ROIs/l_MTC.nii.gz --proj frac 0 1 .1 --fillthresh .3 --reg ${subj}/freesurfer_T1/register.dat
-
-
-#LTC : latral temporal cortex
-#	transverse temporal cortex, superior temporal gyrus, banks of the superior temporal sulcus, inferior temporal gyrus, middle temporal gyrus, temporal pole
-
-#mri_babel2vol --label ${subj}/freesurfer_T1/labels/lh.transversetemporal.label --label ${subj}/freesurfer_T1/labels/lh.superiortemporal.label --label ${subj}/freesurfer_T1/labels/lh.bankssts --label ${subj}/freesurfer_T1/labels/lh.inferiortemporal.label --label ${subj}/freesurfer_T1/labels/lh.middletemporal --label ${subj}/freesurfer_T1/labels/lh.temporalpole.label --temp ${subj}/freesurfer_T1/mri/rawavg.mgz --subject freesurfer_T1 --hemi lh --o ${subj}/segmentation/with_T1_freesurfer/ROIs/l_LTC.nii.gz --proj frac 0 1 .1 --fillthresh .3 --reg ${subj}/freesurfer_T1/register.dat
-
-
-
-
-#OCC : occipital cortex
-#	pericalcarine cortex, lingual gyrus, lateral occipital cortex, cuneus cortex
-
-
-#mri_babel2vol --label ${subj}/freesurfer_T1/labels/lh.pericalcarine.label --label ${subj}/freesurfer_T1/labels/lh.lingual.label --label ${subj}/freesurfer_T1/labels/lh.lateraloccipital.label --label ${subj}/freesurfer_T1/labels/lh.cuneus.label --temp ${subj}/freesurfer_T1/mri/rawavg.mgz --subject freesurfer_T1 --hemi lh --o ${subj}/segmentation/with_T1_freesurfer/ROIs/l_OCC.nii.gz --proj frac 0 1 .1 --fillthresh .3 --reg ${subj}/freesurfer_T1/register.dat
-
-
-#mri_convert mri/rawavg.mgz mri/rawavg.nii.gz
-#echo fslview ${subj}/freesurfer_T1/mri/rawavg.nii.gz l_LPFC -l Green l_MPFC -l Red-Yello l_MTC -l Red l_OFC -l Blue l_LTC -l Yellow l_OCC -l Hot-Pink l_PC -l Copper l_SMC -l Cool 
-
+            newList=( )#reset newList
+            echo
+            echo
+        done
+    done
 ```
 
-<br>
-<br>
-<br>
-<br>
+```
+mri_convert mri/rawavg.mgz mri/rawavg.nii.gz   #converting mgz to nii.gz for viewing in fsl
 
-#thalamus ROI
+echo fslview ${subj}/freesurfer_T1/mri/rawavg.nii.gz l_LPFC -l Green l_MPFC -l Red-Yello l_MTC -l Red l_OFC -l Blue l_LTC -l Yellow l_OCC -l Hot-Pink l_PC -l Copper l_SMC -l Cool    #for viewing output of the cortical ROI + thalamus roi
+```
+<br><br><br><br>
+<br><br><br><br>
+
+
+#Thalamus extraction
+##from freesurfer output
 
 ```
     mri_convert\
         -rl ${subj}/freesurfer_T1/mri/rawavg.mgz\
         -rt nearest ${subj}/freesurfer_T1/mri/aseg.mgz ${subj}/freesurfer_T1/aseg2raw.nii.gz
+
+	#10 이 왼쪽  49가 오른쪽
+	fslmaths ${subj}/freesurfer_T1/aseg2raw.nii.gz -uthr 10 -thr 10 ${subj}/segmentation/with_T1_freesurfer/ROIs/l_thalamus.nii.gz
+
+	fslmaths ${subj}/segmentation/with_T1_freesurfer/ROIs/l_thalamus.nii.gz -div 10 ${subj}/segmentation/with_T1_freesurfer/ROIs/l_thalamus.nii.gz
+
+	fslmaths ${subj}/freesurfer_T1/aseg2raw.nii.gz -uthr 49 -thr 49 ${subj}/segmentation/with_T1_freesurfer/ROIs/r_thalamus.nii.gz
+
+	fslmaths ${subj}/segmentation/with_T1_freesurfer/ROIs/r_thalamus.nii.gz -div 49 ${subj}/segmentation/with_T1_freesurfer/ROIs/r_thalamus.nii.gz
+
 ```
 
 
-	#10 이 왼쪽  49가 오른쪽
-
-			#fslmaths ${subj}/freesurfer_T1/aseg2raw.nii.gz -uthr 10 -thr 10 ${subj}/segmentation/with_T1_freesurfer/ROIs/l_thalamus.nii.gz
-
-			#fslmaths ${subj}/segmentation/with_T1_freesurfer/ROIs/l_thalamus.nii.gz -div 10 ${subj}/segmentation/with_T1_freesurfer/ROIs/l_thalamus.nii.gz
-
-
-
-			#fslmaths ${subj}/freesurfer_T1/aseg2raw.nii.gz -uthr 49 -thr 49 ${subj}/segmentation/with_T1_freesurfer/ROIs/r_thalamus.nii.gz
-
-			#fslmaths ${subj}/segmentation/with_T1_freesurfer/ROIs/r_thalamus.nii.gz -div 49 ${subj}/segmentation/with_T1_freesurfer/ROIs/r_thalamus.nii.gz
-
-
-
-
-
-##################################################################################################
-##################################################################################################
-##################################################################################################
-##################################################################################################
-###############################################Connecitivty based segmentation###################################################
-##################################################################################################
-##################################################################################################
-##################################################################################################
-		
-
-
-#registration of T1_spaced_ROIs into diffusion space using ${subj}/registration/*mat file
-
-#	mkdir ${subj}/segmentation/with_T1_freesurfer/reg_ROI
+<br><br><br><br>
+<br><br><br><br>
+#Registration of ROIs
+##registration of T1_spaced_ROIs into diffusion space using ${subj}/registration/*mat file
+```
+mkdir ${subj}/segmentation/with_T1_freesurfer/reg_ROI
 
 #fslmaths ${subj}/segmentation/with_T1_freesurfer/ROIs/l_LPFC.nii.gz -div ${subj}/segmentation/with_T1_freesurfer/ROIs/l_LPFC.nii.gz ${subj}/segmentation/with_T1_freesurfer/ROIs/l_LPFC.nii.gz 
 #fslmaths ${subj}/segmentation/with_T1_freesurfer/ROIs/l_LTC.nii.gz -div ${subj}/segmentation/with_T1_freesurfer/ROIs/l_LTC.nii.gz ${subj}/segmentation/with_T1_freesurfer/ROIs/l_LTC.nii.gz
@@ -247,64 +237,6 @@ do
 #fslmaths ${subj}/segmentation/with_T1_freesurfer/ROIs/r_PC.nii.gz -div ${subj}/segmentation/with_T1_freesurfer/ROIs/r_PC.nii.gz ${subj}/segmentation/with_T1_freesurfer/ROIs/r_PC.nii.gz
 #fslmaths ${subj}/segmentation/with_T1_freesurfer/ROIs/r_SMC.nii.gz -div ${subj}/segmentation/with_T1_freesurfer/ROIs/r_SMC.nii.gz ${subj}/segmentation/with_T1_freesurfer/ROIs/r_SMC.nii.gz
 
-
-
-	foreach g (lh_LPFC.nii.gz lh_LTC.nii.gz lh_MPFC.nii.gz lh_MTC.nii.gz lh_OCC.nii.gz lh_OFC.nii.gz lh_PC.nii.gz lh_SMC.nii.gz lh_thalamus.nii.gz rh_LPFC.nii.gz rh_LTC.nii.gz rh_MPFC.nii.gz rh_MTC.nii.gz rh_OCC.nii.gz rh_OFC.nii.gz rh_PC.nii.gz rh_SMC.nii.gz rh_thalamus.nii.gz)
-	/usr/local/fsl/bin/flirt -in ${subj}/segmentation/with_T1_freesurfer/ROIs/$g -applyxfm -init ${subj}/registration/diffusionToFreesurfer -out ${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_$g -paddingsize 0.0 -ref ${subj}/DTI/dti_FA.nii.gz
-	end
-
-
-
-
-
-##connectivity based classification using T1_freesurfer ROI
-####   LEFT
-
-echo ---------------------------------
-echo connectivity segmentation on  : left
-echo ---------------------------------
-
-rm -rf ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left &> /dev/null
-mkdir -p ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_lh_LPFC.nii.gz > ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_lh_LTC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_lh_MPFC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_lh_MTC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_lh_OCC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_lh_OFC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_lh_PC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_lh_SMC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/targets.txt
-
-/usr/local/fsl/bin/probtrackx --mode=seedmask -x ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_lh_thalamus.nii.gz -l -c 0.2 -S 2000 --steplength=0.5 -P 5000 --forcedir --opd -s ~/11/con/${subj}/DTI.bedpostX/merged -m ~/11/con/${subj}/DTI.bedpostX/nodif_brain_mask  --dir=/home/kevin/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/ --targetmasks=/home/kevin/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/targets.txt --os2t 
-
-##connectivity based classification using T1_freesurfer ROI
-####   RIGHT
-
-echo ---------------------------------
-echo connectivity segmentation on  : right
-echo ---------------------------------
-
-rm -rf ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right &> /dev/null
-mkdir -p ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_rh_LPFC.nii.gz > ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_rh_LTC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_rh_MPFC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_rh_MTC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_rh_OCC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_rh_OFC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_rh_PC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/targets.txt
-echo ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_rh_SMC.nii.gz >> ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/targets.txt
-
-/usr/local/fsl/bin/probtrackx --mode=seedmask -x ~/11/con/${subj}/segmentation/with_T1_freesurfer/reg_ROI/reg_rh_thalamus.nii.gz  -l -c 0.2 -S 2000 --steplength=0.5 -P 5000 --forcedir --opd -s ~/11/con/${subj}/DTI.bedpostX/merged -m ~/11/con/${subj}/DTI.bedpostX/nodif_brain_mask  --dir=/home/kevin/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/ --targetmasks=/home/kevin/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/targets.txt --os2t 
-
-find_the_biggest ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/seeds* ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/left_thalamus_segmentation.nii.gz
-find_the_biggest ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/seeds* ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/right_thalamus_segmentation.nii.gz
-
-fslmaths ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/left/left_thalamus_segmentation.nii.gz -add ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/right/right_thalamus_segmentation.nii.gz ~/11/con/${subj}/segmentation/with_T1_freesurfer/segmentation/both_thalamus.nii.gz
-
-#mkdir /media/backup/11/con/$f -p
-#mkdir /media/backup/11/con/${subj}/DTI
-#cp ${subj}/DTI /media/backup/11/con/${subj}/DTI -r
 
 
 done
