--- a/FSL/thalamusProject.html
+++ b/FSL/thalamusProject.html
@@ -3,11 +3,15 @@
 <xmp theme="journal" style="display:non;">
 
 #Thalamus Project Preprocessing
-## in bash script looping through each subject
+--------------------------------------------------
+## scripts loop through each subject
 <br>
 ### executed where there are subject folders 
 ### with 
 ### DTI and T1 dicoms
+most of the preprocessing scripts are in bash,
+whereas later it is more in python.
+
 <br><br>
 <br><br>
 <br><br>
