--- a/FSL/thalamusProject.html
+++ b/FSL/thalamusProject.html
@@ -24,8 +24,9 @@ whereas later it is more in python.
 #!/bin/bash
 for subj in $@  #looping through subjects
 do
-	mricron ${subj}/DTI/*    #dcm2nii into nii files
-	mricron ${subj}/T1/*
+    # dcm2nii into nii files
+    mricron ${subj}/DTI/*
+    mricron ${subj}/T1/*
 
 	for possibleImage in dcm,IMA,hdr    #moving original files
 	do
@@ -114,86 +115,12 @@ do
 
 ```
 
-<br><br><br><br><br><br><br><br>
-#Python code for extracting cortical ROIs and thalamus
-## this method removed the empty voxels within the roi occuring
-## in the mri_label2vol function (scripted in bash little further below)
-```
-#!/usr/bin/python
-'''
-changing values of fillthresh made no change
-changing values of proj frac made very small changes of voxel assignment
-to one or the other subgroup(layer)
-'''
-
-import os
-import re
-
-subjectComp = re.compile('.*(NOR|EMO|CHR).*')
-subjects = filter(subjectComp.search,[item for item \
-        in os.listdir(os.getcwd()) if os.path.isdir(item)==True])
-
-#setting environment
-os.environ["FREESURFER_HOME"] = '/projects/schiz/software/freesurfer-v4.5/freesurfer'
- 
-#subjects =['CHR02_PJH','CHR01_JHJ']
-for subject in subjects:
-    os.environ["SUBJECTS_DIR"] = '{0}'.format(subject)
-
-    #to extract thalamus for left and right in loop
-    for side in ['lh','rh']:
-
-        if side == 'lh':
-            os.system('mri_binarize --i {0}/freesurfer_T1/mri/aseg.mgz \
-                    --match 10 \
-                    --o {0}/segmentation/with_T1_freesurfer/ROIs/{1}_thalamus.nii'.format(subject,side))
-        else:
-            os.system('mri_binarize --i {0}/freesurfer_T1/mri/aseg.mgz \
-                    --match 49 \
-                    --o {0}/segmentation/with_T1_freesurfer/ROIs/{1}_thalamus.nii'.format(subject,side))
-
-    #Frontal lobe
-    for cortex in "OFC","MPFC","LPFC","SMC","PC","MTC","LTC","OCC":
-        for side in 'left','right':
-            if side=='left':
-                firstNum='1'
-                sside='lh'
-            else:
-                firstNum='2'
-                sside='rh'
-
-            if cortex=="OFC":
-                match='019 014 012'
-            elif cortex=="MPFC":
-                match='002 026 028'
-            elif cortex=="LPFC":
-                match='020 027 032 018'
-            elif cortex=="SMC":
-                match='024 003 022 017'
-            elif cortex=="PC":
-                match='008 031 025 023 010 029'
-            elif cortex=="MTC":
-                match='006 016 007'
-            elif cortex=="LTC":
-                match='034 030 001 009 015 033'
-            elif cortex=="OCC":
-                match='021 013 011 005' 
-
-            matchList=' '.join([firstNum+item for item in match.split(' ')])
-
-            os.system('mri_binarize --i {subj}/freesurfer_T1/mri/aparc+aseg.mgz\
-                --match {matchList} \
-                --o {subj}/segmentation/with_T1_freesurfer/ROIs/{side}_{cortex}.nii.gz'.format(
-                subj=subject,matchList=matchList,side=side,cortex=cortex))
-```
 <br><br>
 <br><br>
-# Wrong sample here !!
-## Gave empty voxels !!
-##Cortical roi extraction from freesurfer output
-###using T1_freesurfer result
-###**When you run freesurfer, make sure the T1-image is used though
-###diffusion images also gives the output.**
+#Cortical roi extraction from freesurfer output
+##using T1_freesurfer result
+**When you run freesurfer, make sure the T1-image is used though
+diffusion images also gives the output.**
 ```
 	mkdir ${subj}/segmentation/
 	mkdir ${subj}/segmentation/with_T1_freesurfer/
@@ -320,6 +247,111 @@ mkdir ${subj}/segmentation/with_T1_freesurfer/reg_ROI
 done
 
 ```
+
+```
+#!/usr/bin/python
+'''
+changing values of fillthresh made no change
+changing values of proj frac made very small changes of voxel assignment
+to one or the other subgroup(layer)
+'''
+
+import os
+import re
+
+
+subjectComp = re.compile('.*(NOR|EMO|CHR).*')
+subjects = filter(subjectComp.search,[item for item \
+        in os.listdir(os.getcwd()) if os.path.isdir(item)==True])
+
+os.environ["FREESURFER_HOME"] = '/projects/schiz/software/freesurfer-v4.5/freesurfer'
+#
+#subjects =['CHR02_PJH','CHR01_JHJ']
+for subject in subjects:
+    os.environ["SUBJECTS_DIR"] = '{0}'.format(subject)
+    #to extract thalamus
+    for side in ['lh','rh']:
+
+        if side == 'lh':
+            os.system('mri_binarize --i {0}/freesurfer_T1/mri/aseg.mgz \
+                    --match 10 \
+                    --o {0}/segmentation/with_T1_freesurfer/ROIs/{1}_thalamus.nii'.format(subject,side))
+        else:
+            os.system('mri_binarize --i {0}/freesurfer_T1/mri/aseg.mgz \
+                    --match 49 \
+                    --o {0}/segmentation/with_T1_freesurfer/ROIs/{1}_thalamus.nii'.format(subject,side))
+
+    #Frontal lobe
+    #medial prefrontal cortex
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 1019 1014 1012 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/lh_OFC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 2019 2014 2012 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/rh_OFC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 1002 1026 1028 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/lh_MPFC.nii.gz'.format(subject))
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 2002 2026 2028 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/rh_MPFC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 1020 1027 1032 1018 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/lh_LPFC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 2020 2027 2032 2018 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/rh_LPFC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 1024 1003 1022 1017 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/lh_SMC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 2024 2003 2022 2017 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/rh_SMC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 1008 1031 1025 1023 1010 1029 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/lh_PC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 2008 2031 2025 2023 2010 2029 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/rh_PC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 1006 1016 1007 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/lh_MTC.nii.gz'.format(subject))
+
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 2006 2016 2007 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/rh_MTC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 1034 1030 1001 1009 1015 1033\
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/lh_LTC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 2034 2030 2001 2009 2015 2033\
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/rh_LTC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 1021 1013 1011 1005 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/lh_OCC.nii.gz'.format(subject))
+
+    os.system('mri_binarize --i {0}/freesurfer_T1/mri/aparc+aseg.mgz\
+        --match 2021 2013 2011 2005 \
+        --o {0}/segmentation/with_T1_freesurfer/ROIs/rh_OCC.nii.gz'.format(subject))
+
+
+
+
+
+
 
 
 </xmp>
