thalamus project separated

--- a/contents.html
+++ b/contents.html
@@ -39,10 +39,17 @@
 </a> 
 <br><br><br><br><br>
 
+#R
+--------------------------------------
+<a href="./R/sort.html">
+##dataframe sort
+</a> 
+<br><br><br><br><br>
+
 #WTF
 --------------------------------------
 <a href="./WTF/ffmpeg.html">
-##avi-->Ipad
+##avi --> Ipad
 </a> 
 <br><br><br><br><br>
 
