--- a/thalamusProject/index.html
+++ b/thalamusProject/index.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html>
 <xmp theme="journal" style="display:non;">
-#Neuroimaging
+#CHR thalamus segmentation
 <br>
 ##FSL
 
 <br>
-<a href="FSL/probabilitic.html">
-###probabilistic tractography
+<a href="about_connectivity_thresholding.html">
+###What is connectivity and why threshold?
 </a>
 
-<a href="FSL/TBSS.html">
-###TBSS
-</a>
-
-<a href="thalamusProject/index.html">
-###thalamus project
-</a>
-
-</a>
 
 <br>
 <br>
@@ -26,7 +17,6 @@
 <br>
 <br>
 
-##Slicer
 
 
 <br>
@@ -35,7 +25,6 @@
 <br>
 <br>
 
-##R
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js">
 </script>
