--- a/thalamusProject/about_connectivity_thresholding.html
+++ b/thalamusProject/about_connectivity_thresholding.html
@@ -39,6 +39,24 @@ ranging from 10% to 90% of robust range.
 fslmaths <imgIn> -thrP <%threshold> <imgOut>
 ```
 
+<br><br><br>
+##Some significant differences only appear in certain thresholds...
+**It could be explained as**
+
+
+There is difference in regions(voxels) which have 
+greater connection than certain value.
+
+such as...
+
+1. There might be different number voxels with higher connectivity values than threshold
+
+
+2. Connection might be more stronger in those percentile having higher connectivity values
+
+
+3. or Could be both of above cases
+
 
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js">
