--- a/thalamusProject/index.html
+++ b/thalamusProject/index.html
@@ -3,8 +3,8 @@
 <xmp theme="journal" style="display:non;">
 #CHR thalamus segmentation
 <br>
-##FSL
 
+### connectivity
 <br>
 <a href="about_connectivity_thresholding.html">
 ###What is connectivity and why threshold?
