--- a/neuro.html
+++ b/neuro.html
@@ -36,6 +36,19 @@
 <br>
 
 ##R
+
+<br>
+<br>
+<br>
+<br>
+<br>
+
+##Freesurfer
+
+<br>
+<a href="FREESURFER/tksurfer.html">
+###viewing/changing colour labels(tksurfer)
+</a>
 </xmp>
 <script src="http://strapdownjs.com/v/0.2/strapdown.js">
 </script>
